--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <p>Gosto de Jogar vôlei de praia, jogar jogos online, e conversar!</p>
     <img src="./Fotos/foto-volei.png" alt="foto-volei" class="foto">
     <video width="160" poster="./Fotos/foto-volei2.jpg" controls>
-      <source src="/videos/volei-video.mp4" type="video/mp4" class="video"></video>
+      <source src="./videos/volei-video.mp4" type="video/mp4" class="video"></video>
 
   </section>
 
