--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <section id="foto">
     <h2>Sobre Mim</h2>
-    <img src="../Fotos/minha-foto.png" alt="Minha Foto" class="foto">
+    <img src="./Fotos/minha-foto.png" alt="Minha Foto" class="foto">
     <p>Olá! Meu nome é Kayke Geller Mantovani. Tenho 19 anos e essa é a minha página pessoal.</p>
   </section>
 
@@ -38,7 +38,7 @@
     <p>Gosto de Jogar vôlei de praia, jogar jogos online, e conversar!</p>
     <img src="./Fotos/foto-volei.png" alt="foto-volei" class="foto">
     <video width="160" poster="./Fotos/foto-volei2.jpg" controls>
-      <source src="./videos/volei-video.mp4" type="video/mp4" class="video"></video>
+      <source src="./videos/volei-video.mp4" type="video/mp4"></video>
 
   </section>
 
